--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="api_url">http://10.0.2.2:4000/</string>
+    <string name="preference_file_key">dev.doyeong.theillogical.preference</string>
+    <string name="login_token">jwtToken</string>
 </resources>
