--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="api_url">http://10.0.2.2:4000/</string>
     <string name="preference_file_key">dev.doyeong.theillogical.preference</string>
     <string name="login_token">jwtToken</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
